--- a/thumbor/Dockerfile
+++ b/thumbor/Dockerfile
@@ -6,7 +6,8 @@ VOLUME ["/srv/thumbor/storage"]
 
 RUN apt-get update && apt-get upgrade -y && apt-get -y install build-essential checkinstall gcc python python-dev libpng12-dev libtiff5-dev libpng-dev libjasper-dev libwebp-dev libcurl4-openssl-dev python-pgmagick libmagick++-dev graphicsmagick libopencv-dev python-pip && apt-get clean
 
-RUN pip install pycurl numpy thumbor
+RUN pip install pycurl numpy
+RUN pip install thumbor
 
 COPY thumbor.conf /etc/thumbor.conf
 ADD init /init
