--- a/sharp-image/package.json
+++ b/sharp-image/package.json
@@ -4,6 +4,7 @@
   "description": "Sharp-Image Resizer",
   "dependencies": {
     "express": "^4.16.1",
+    "lodash": "^4.17.4",
     "morgan": "^1.9.0",
     "request": "^2.83.0",
     "sharp": "^0.18.4"
